--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@ maybe they sleep while they're awake<br>
 		<p><em>-<a href="https://www.instagram.com/mitchzachry/">Mitch Zachry</a></em></p>
 		<p>E.P Out 17/03/2023<p>
 		<p><em>all major platforms</em></p>
+		
+		<p><a href="./EPK.html">secret link</a></p>
 	</footer>
 
 
