--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h2>audio/visual poem</h2>
 		</header>
 		<main>
-			<audio controls>
+			<audio controls type="audio/x-m4a" autoplay>
 				<source src="./media/sheep talk.m4a">
 				Cannot play ):
 			</audio>
