--- a/EPK.html
+++ b/EPK.html
@@ -4,6 +4,7 @@
 		<meta charset=“UTF-8”>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="./styles.css">
+		<title>SHEEP! HIDE! POWER!</title>
 	</head>
 	<body>
 		<header>
@@ -13,8 +14,8 @@
 		<main>
 			<h3>Bio</h3>
 			<p>Mitch Zachry is a producer, songwriter and artist based in Wellington, New Zealand. </p>
-			<p>A string of single releases in 2022, including "hiding (don't lay it on lightly)" and "setting sun" have placed Zachry in a musical world all of his own. A world where authenticity and exploration reign supreme. While music is something of an obsession for Zachry, the fascination has always been ideas, whether they be questions of identity and purpose or the spiritual trajectory of humanity.</p>
-			<p>"SHEEP! HIDE! POWER!" is an exploration on multiple levels. It is an examination of connection and love and how these things arise. It is an authentic case for optimism in these strange times. It is a musical experiment and a suggestion for new ways of thinking. It is a deciphering of things already known by those who sit and listen. It is staring into the eyes of a sheep and feeling the hidden power."</p>
+			<p>A string of single releases in 2022, including "hiding (don't lay it on lightly)" and "setting sun" have placed Zachry in a musical world all of his own where authenticity and exploration reign supreme. While music is the vehicle for expression, the fascination for Zachry has always been ideas whether they be questions of identity and purpose or the spiritual trajectory of humanity.</p>
+			<p>"SHEEP! HIDE! POWER!" is an exploration on multiple levels. It is an examination of connection, love and how these things arise. It is an authentic case for optimism in strange times and a musical suggestion for a new way of thinking. It is staring into the eyes of a sheep and feeling the hidden power.</p>
 			<p>E.P Out 17/03/2023<p>
 		<div id="media">
 			<h3>Media</h3>
